--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             <p>The man who saved a billion lives.</p>
         </div>
         <div id="img-div">
-            <img id="image" src="/images/tribute-page-main-image.jpg" alt="">
-            <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+            <figure>
+                <img id="image" src="/images/tribute-page-main-image.jpg" alt="">
+                <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
+            </figure>
         </div>
         <div id="tribute-info">
-            <h3>Here's a timeline of Dr. Borlaug's life:</h3>
+            <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
                 <li><strong>1914</strong> - Born in Cresco, Iowa</li>
                 <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -37,6 +39,12 @@
                 <li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                 <li><strong>2009</strong> - dies at the age of 95.</li>
             </ul>
+            <blockquote cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+                <p>"Borlaug's life and achievement are testimony to the far-reaching
+                    contribution that one man's towering intellect, persistence and
+                    scientific vision can make to human peace and progress."</p>
+                <cite>-- Indian Prime Minister Manmohan Singh</cite>
+            </blockquote>
 
         </div>
         <div id="tribute-link">
